# game_engine

./: .gitignore  .vimrc  .ycm_extra_conf.py  CMakeLists.txt  _clang-format  gdb-co
binsrc/: CMakeLists.txt
binsrc/game_launcher/: .session.vim  CMakeLists.txt  load_library.cpp  load_library.h  main.cpp  platform_specific.h  posix.cpp  posix.h  win32.cpp  win32.h
lib/: CMakeLists.txt
lib/include/: compiler_util.h  component.h  entity.h  entity.inl  launcher_api.h  spec_subsystem.h  spec_subsystem.inl  subsystem.h  time_access.h  time_access.inl  time_types.h  world.h  world.inl
lib/include/aio/: aio.h  aio.inl  aio_file.h  aio_linux.h  aio_tcp.h  aio_win32.h
lib/include/logging/: control_log.h  file_loader.h  file_loader.inl  log.h  log_priv.h
lib/include/memory/: vers_ptr.h  vers_ptr.inl
lib/include/opengl/: buffer.h  buffer.inl  frag_loc.h  framebuffer.h  output_location.h  program.h  renderbuffer.h  shader.h  texture.h  texture.inl  uniform.h  uniform.inl  uniform_buffer.h  vertex_array_object.h  vertex_array_object.inl  vertex_attr.h
lib/include/opengl/parser/: obj_parser.h  obj_parser.inl
lib/include/platform/: aio.h  time.h
lib/include/platform/aio/: unix.h  win32.h
lib/include/platform/time/: unix.h  win32.h
lib/include/private/: sort_entities_if_necessary.h  sort_entities_if_necessary.inl  sort_if_necessary.h  sort_if_necessary.inl
lib/include/render/: mesh.h
lib/include/subsystems/: time.h  time_subsystem.h
lib/include/subsystems/ai/: ai.h  ai_component.h  ai_entity.h
lib/include/subsystems/render/: drawer.h  render.h  render_component.h
lib/include/thr_queue/: coroutine.h  coroutine.inl  functor.h  future.h  global_thr_pool.h  queue.h  queue.inl  thread_api.h  thread_pool.h  util_queue.h  wait_event.h  wait_event.inl
lib/include/thr_queue/event/: cond_var.h  future.h  future.inl  mutex.h
lib/include/util/: function_traits.h  iter_to_ptr.h
lib/src/: CMakeLists.txt  component.cpp  entity.cpp  subsystem.cpp  time_access.cpp  world.cpp
lib/src/aio/: CMakeLists.txt  aio.cpp  aio_file.cpp  aio_linux.cpp  aio_tcp.cpp  aio_win32.cpp
lib/src/logging/: CMakeLists.txt  control_log.cpp  file_loader.cpp  log.cpp  output.cpp
lib/src/opengl/: CMakeLists.txt  framebuffer.cpp  output_location.cpp  program.cpp  renderbuffer.cpp  shader.cpp  texture.cpp  uniform.cpp  uniform_buffer.cpp  vertex_array_object.cpp
lib/src/opengl/parser/: CMakeLists.txt  obj_parser.cpp
lib/src/platform/: CMakeLists.txt
lib/src/platform/aio/: CMakeLists.txt  linux.cpp  unix.cpp  unix_impl.h  win32.cpp
lib/src/platform/time/: CMakeLists.txt  unix.cpp  win32.cpp
lib/src/render/: CMakeLists.txt  mesh.cpp
lib/src/subsystems/: CMakeLists.txt  time.cpp  time_subsystem.cpp
lib/src/subsystems/ai/: CMakeLists.txt  ai.cpp
lib/src/subsystems/render/: CMakeLists.txt  drawer.cpp  render.cpp  render_component.cpp
lib/src/thr_queue/: CMakeLists.txt  cor_data.cpp  cor_data.h  coroutine.cpp  global_thr_pool.cpp  global_thr_pool_impl.cpp  global_thr_pool_impl.h  global_thr_pool_impl.inl  global_thr_pool_impl_linux.cpp  global_thr_pool_impl_linux.h  global_thr_pool_impl_win32.cpp  global_thr_pool_impl_win32.h  queue.cpp  stack_allocator.cpp  stack_allocator.h  stack_allocator_linux.cpp  stack_allocator_linux.h  stack_allocator_win32.cpp  stack_allocator_win32.h  thread_pool.cpp  util_queue.cpp
lib/src/thr_queue/event/: CMakeLists.txt  all.h  better_lock.h  cond_var.cpp  future.cpp  lock_unlocker.h  mutex.cpp  uv_thread.cpp  uv_thread.h  uv_thread.inl
lib/tests/: CMakeLists.txt  comp_ent_test.cpp  io_test.cpp  logging_test.cpp  opengl_test.cpp  parser_test.cpp  queue_test.cpp  time_test.cpp  vers_data_ptr_test.cpp
test_client/: CMakeLists.txt  server_client.cpp  test.cpp
tests/: CMakeLists.txt  main.cpp
